fixed alignment

--- a/TP2/css/game.css
+++ b/TP2/css/game.css
@@ -39,13 +39,16 @@
 
 .game-front-image-1 {
     width: 350px;
-    position: absolute;
     z-index: 300;
     height: 300px;
-    bottom: 60%;
-    left: 40%;
+    /*bottom: 60%;*/
+    /*left: 40%;*/
     border-radius: 15px;
     object-fit: fill;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .game-section {
@@ -60,11 +63,19 @@
 .game-play-button {
     position: absolute;
     z-index: 350;
-    bottom: 67%;
-    left: 40%;
     height: 60px;
     width: 350px;
     font-size: larger;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.game-section-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .like-button, .dislike-button {
@@ -141,6 +152,7 @@
 
 .info-box {
     vertical-align: center;
+    overflow-y: scroll;
 }
 
 
